FiBo-274: Fix usage to conform with Java 8